# zkteco-utility

./: .gitignore  CLAUDE.md  LICENSE  PROJECT.md  README.md  build_linux.sh  build_windows.bat  i18n.py  pyproject.toml  recover_and_export.py  test_zkteco_app.py  updater.py  zkteco_app.py
.github/workflows/: release.yml
